--- a/demo.html
+++ b/demo.html
@@ -4,31 +4,30 @@
 	<meta charset="UTF-8">
 	<title>ng.validate.js demo</title>
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-	<script src="bower_components/angular/angular.js"></script>
 	<link rel="stylesheet" href="ng.validate.css">
 	<style>
 	body{padding: 20px;}
 	</style>
 </head>
 <body ng-controller="ngValidateCtrlDemo">
-	<form ng-validate="regexp" ng-submit="submit()" name="form">
-		<div class="form-group" ng-class="{'has-error': form.idcard.$error.integer}">
+	<form ng-validate="regexp" ng-submit="submit()">
+		<div class="form-group">
 			<label class="control-label">身份证号</label>
 			<input type="text" class="form-control" name="idcard" placeholder="请输入身份证号" ng-model="idcard">
-			<span ng-show="form.idcard.$error.integer">This is not valid integer!</span>
 		</div>
 		<div class="form-group">
 			<label class="control-label">QQ号</label>
-			<input type="text" class="form-control" name="qq" placeholder="请输入qq号" ng-validate-rules="regexp.qq" ng-model="qq">
+			<input type="text" class="form-control" name="qq" placeholder="请输入qq号" ng-model="qq">
 		</div>
 		<div class="checkbox">
 			<label>
 				<input type="checkbox" name="check" ng-model="check"> Check me out
 			</label>
 		</div>
-		<button type="submit" class="btn btn-primary" ng-disabled="form.$invalid">Submit</button>
+		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
 
 	<script src="ng.validate.js"></script>
