--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,7 @@
 	</style>
 </head>
 <body ng-controller="ngValidateCtrlDemo">
-	<form ng-validate="regexp" ng-submit="submit()" ng-validate-instance="validateInstance" ng-validate-auto="false">
+	<form ng-validate="regexp" ng-submit="submit()" ng-validate-instance="validateInstance" ng-validate-auto="true">
 		<div class="form-group">
 			<label class="control-label">身份证号</label>
 			<input type="text" class="form-control" name="idcard" placeholder="请输入身份证号" ng-model="idcard">
@@ -21,6 +21,14 @@
 		<div class="form-group">
 			<label class="control-label">QQ号</label>
 			<input type="text" class="form-control" name="qq" placeholder="请输入qq号" ng-model="qq">
+		</div>
+		<div class="form-group">
+			<label class="control-label">城市</label>
+			<select class="form-control" name="city">
+				<option value="">请选择城市</option>
+				<option value="1">广州</option>
+				<option value="2">北京</option>
+			</select>
 		</div>
 		<div class="checkbox">
 			<label>
@@ -44,6 +52,11 @@
 			qq: {
 				blank: [/[^\s]+/,'qq号不能为空'],
 				format: [/^\d{5,10}$/,'qq号为5-10位数字']
+			},
+			city: {
+				blank: [function(target){
+					return !!target.val();
+				},'请选择城市']
 			},
 			check: {
 				blank: [function(target){
