--- a/demo.html
+++ b/demo.html
@@ -39,7 +39,7 @@
 			<label class="control-label">key</label>
 			<input type="text" class="form-control" name="key" placeholder="key" ng-model="key">
 		</div>
-		<button type="submit" class="btn btn-primary">Submit</button>
+		<button type="submit" class="btn btn-primary" style="margin-top: 1500px;">Submit</button>
 	</form>
 
 	<script src="ng.validate.js"></script>
@@ -51,7 +51,7 @@
 		that.regexp = {
 			idcard: {
 				blank: [/[^\s]+/,'身份证号不能为空'],
-				format: [/^\d$/,'身份证号格式错误'],
+				format: [/^\d+$/,'身份证号格式错误'],
 				len: [/^\d{18}$/,'身份证号长度错误']
 			},
 			qq: {
